--- a/src/styles/tasklist.scss
+++ b/src/styles/tasklist.scss
@@ -41,7 +41,7 @@ section.task-list {
         }
       }
 
-      button {
+      button{
         font-weight: 600;
         border-radius: 8px;
         border: 0;
@@ -54,7 +54,13 @@ section.task-list {
         padding: 14px;
         transition: filter 0.2s;
 
-        &:hover {
+        &[disabled]{
+          background:var(--background);
+          color: var(--text-title);
+          cursor: not-allowed;
+        }
+
+        &:hover:not([disabled])  {
           filter: brightness(0.95);
         }
       }
